Fix handling of columns in which no cell originates (i.e., unneeded extra colspan).  b=363329  Patch from Bernd Mielke, bmlk%gmx.de, with review comments addressed by me.  r+sr=dbaron